fix: spacing between landing page tags

--- a/src/styles/templates/main.scss
+++ b/src/styles/templates/main.scss
@@ -66,6 +66,7 @@
       padding: 0 $default-spacing;
       display: flex;
       justify-content: flex-end;
+      gap: 0.25rem;
     }
     & .highlight {
       display: flex;
